--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
   <link rel="shortcut icon" href="http://seanzhang0316.github.io/favicon.png">
 
   
-  <link href="http://seanzhang0316.github.io/atom.xml" rel="alternate" type="application/rss+xml" title="乌鸦坐飞机" />
+  <link href="http://seanzhang0316.github.io/index.xml" rel="alternate" type="application/rss+xml" title="乌鸦坐飞机" />
 </head>
 
   <body class=" ">
